<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:padding="20dp"
    tools:context=".NewTask">

    <Button
        android:id="@+id/button"
        android:layout_width="113dp"
        android:layout_height="48dp"
        android:layout_marginBottom="28dp"
        android:text="@string/add_task"
        android:onClick="addNewTask"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.805"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="UsingOnClickInXml" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_a_suitable_name"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/task_name"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="#777777" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        tools:layout_editor_absoluteX="24dp">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_date_and_time"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="34dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/dateicon"
                app:srcCompat="@drawable/calendar_500px" />

            <EditText
                android:id="@+id/editTextDate"
                android:layout_width="132dp"
                android:layout_height="48dp"
                android:ems="10"
                android:hint="@string/dd_mm_yy"
                android:inputType="date"
                android:textColor="#FFFFFF"
                android:textColorHint="#757575" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="41dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/timeicon"
                app:srcCompat="@drawable/clock_500px" />

            <EditText
                android:id="@+id/editTextTime"
                android:layout_width="127dp"
                android:layout_height="48dp"
                android:ems="10"
                android:hint="@string/hh_mm"
                android:inputType="time"
                android:textColor="#FFF7F7"
                android:textColorHint="#757575" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="96dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_a_description"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextTextMultiLine2"
            android:layout_width="333dp"
            android:layout_height="165dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="Finishing criteria, todo list, ..."
            android:inputType="textMultiLine" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>